<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>numato_relay</name>
  <version>0.0.0</version>
  <description>Driver for controlling Numato Labs USB relay PCBAs</description>
  <maintainer email="rfaultless@clearpathrobotics.com">Rhys Faultless</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>numato_relay_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
